# django-rest-framework-template

./: .env  .gitignore  pyproject.toml
config/settings/: base.py  development.py  production.py  stage.py
