[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Nicolas Jeuniaux <nicolas.jeuniaux@barestho.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
django-filter = "^23.5"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
